# environment-parser

./: CMakeLists.txt  README.org
files/: .env
include/: api.h  env.h  io.h  lexer.h  parser.h  state_machine.h  token.h
source/: api.c  env.c  io.c  lexer.c  main.c  parser.c  token.c
